@@ -1472,3 +1472,4 @@ Added support for backups to Google Cloud Storage, once an account is added on t
 Updated to Coppermine script installer to version 1.5.34, Drupal to 7.33, Piwik to 2.9.0, and MoinMoin to 1.9.8.
 A default shell can now be selected for reseller Unix accounts, independent of the domain owner default shell.
 Added a Change Language link the on left menu for easily switching the UI language.
+For new installs, a single logrotate configuration block will now be shared by all virtual servers. For existing systems, whether to use a shared or separate blocks can be set on the Server Templates page.
